exports[`test an add more slots button should be shown when no more slots are available 1`] = `
<li
  className="faPOmU">
  <span
    className="galWEB">
    <img
      alt=""
      className="cOhtuq"
      src="icon.svg" />
    <span
      className="gputun">
      <div>
        <div
          aria-checked={true}
          aria-label="productId"
          className="hGsRJU"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="lbeQtx" />
        </div>
        <span
          aria-hidden="true"
          className="iUAAtI">
          On
        </span>
      </div>
    </span>
  </span>
  <div
    className="drFsFv">
    <span
      className="gwtpew">
      Subscription name
    </span>
    <span
      className="kaVduD">
      <span>
         0 / 20 remaining 
      </span>
    </span>
    <button
      className="dqWYTA">
      <span>
        Add another slot for $69.00
      </span>
    </button>
  </div>
</li>
`;

exports[`test the sitesubscription matches the snapshot 1`] = `
<li
  className="faPOmU">
  <span
    className="galWEB">
    <img
      alt=""
      className="cOhtuq"
      src="icon.svg" />
    <span
      className="gputun">
      <div>
        <div
          aria-checked={true}
          aria-label="productId"
          className="hGsRJU"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="lbeQtx" />
        </div>
        <span
          aria-hidden="true"
          className="iUAAtI">
          On
        </span>
      </div>
    </span>
  </span>
  <div
    className="drFsFv">
    <span
      className="gwtpew">
      Subscription name
    </span>
    <span
      className="kaVduD">
      <span>
         6 / 20 remaining 
      </span>
    </span>
  </div>
</li>
`;
